# vecchio

./: Cargo.toml  README.md  clippy.toml
src/: accel.rs  hittable.rs  main.rs  material.rs  scene.rs  util.rs  vec3.rs
