[package]
name = "vecchio"
version = "0.1.0"
authors = ["bowser"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
derive-new = "0.5"
rand = "0.7.3"
rayon = "1.3.0"
png = "0.16.6"
array-init = "0.1.1"
